--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <!--Icons-->
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css />
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/x-icon" href="to do.png" />
 
     <title>Todolist</title>
